tests/type-errors/expr_control_fold_bad_return.arl
archetype expr_control_fold_bad_return

variable res : nat = 0

entry exec () {
  var p : or<nat, nat> = left<nat> (0);
  res := fold(p, x -> 1);
}
